add(lesson-2): basic middleware

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "Repository for learn express..",
   "keywords": [],
   "author": "Muhammad Rivki <muhammad.rivki@live.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
