--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Muhammad Rivki <muhammad.rivki@live.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
