--- a/package.json
+++ b/package.json
@@ -5,11 +5,24 @@
   "keywords": [],
   "author": "Muhammad Rivki <muhammad.rivki@live.com>",
   "license": "MIT",
+  "scripts": {
+    "test": "NODE_ENV=test jest --detectOpenHandles"
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^5.7.8",
     "multer": "^1.4.2",
     "pug": "^2.0.4"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
